--- a/CoolPics/coolpics.css
+++ b/CoolPics/coolpics.css
@@ -1,4 +1,3 @@
-@import url("https://fonts.googleapis.com/css2?family=Mooli&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=family=Mooli&display=swap");
  :root {
  --primary-color: #52489c;
@@ -7,7 +6,11 @@
  --text-dark: #333;
  --text-light: #ebebeb;
  --primary-font: Arial, Helvetica,sans-serif;
- --secondary-font: Mooli, san-serif;
+ --secondary-font: Mooli, sans-serif;
+ }
+ *{
+    margin: 0;
+    padding: 0;
  }
 body{
     font-family: var(--primary-font);
@@ -21,6 +24,11 @@ h1, h2{
     font-family: var(--secondary-font);
     font-size: 2em;
 }
+.gallery figure {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
 header, footer{
     color: var(--text-light);
     background-color: var(--primary-color);
@@ -32,7 +40,15 @@ header, footer{
 button{
     color: var(--text-light);
 }
-a>nav{
+nav >a {
+    display: flex;
+    flex-direction: column;
+    color: var(--text-light);
+}
+.gallery{
+    display: grid;
+}
+nav{
     display: flex;
     flex-direction: column;
     color: var(--text-light);
@@ -67,8 +83,13 @@ button{
 {
 .gallery{
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: 1fr 1fr 1fr;
+    gap: 16px;
     
+}
+.row1{
+    grid-row: 1;
 }
 nav{
     display: flex;
