--- a/CoolPics/coolpics.css
+++ b/CoolPics/coolpics.css
@@ -19,6 +19,7 @@ body{
     justify-content: center;
     margin: auto, 0;
     text-align: center;
+    background-color: #f3f2f2;
 }
 h1, h2{
     font-family: var(--secondary-font);
@@ -66,6 +67,12 @@ img{
     object-fit: cover;
     height: 250px;
     width: 250px;
+    border-style: solid;
+    border-color: black;
+    border-radius: 1px;
+    padding: 10px;
+    background-color: white;
+    box-shadow: 5px 5px gray;
 }
 button{
     background: none;
