--- a/Blog/blog.css
+++ b/Blog/blog.css
@@ -19,10 +19,9 @@ h1{
 }
 .book{
     width: 100%;
+    justify-items: center;
 }
-img{
-    max-width: 100%;
-}
+
 h2{
     color: #AF1B3F;
 }
@@ -34,6 +33,8 @@ h2{
     margin: 20px;
     justify-self: right;
     padding: 10px;
+    padding-top: 0;
+    margin-top: 0;
 }
 main{
     display: grid;
