personal site added

--- a/Quick_Garden_Tips/site-plan.css
+++ b/Quick_Garden_Tips/site-plan.css
@@ -8,7 +8,7 @@ Fonts are separated by a | */
   --primary-color: #20B04C;
   --secondary-color: #9B5A3C;
   --accent1-color: #A7E719;
-  --accent2-color: #BCBDC0;
+  --accent2-color: #070708;
 
   /* change the values below to your chosen font(s) */
   --heading-font: Georgia;
